@@ -1,0 +1,13 @@
+=pod
+
+=head1 EXAMPLE
+
+=for comment filename=example_number-2.pl
+
+ use strict;
+ use warnings;
+
+ # Print.
+ print "Foo.\n";
+
+=cut
