@@ -1,5 +1,6 @@
 0.13
  - Add test for sections() with two example sections.
+ - Support '-' in example names.
 
 0.12 2022-07-31T23:34:46+02:00
  - Add names for examples.
